--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="C:/projects/eclipse/RootTools/RootTools-2.4.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/projects/eclipse/RootTools/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry excluding="com/hd2/alarm_clk/Shared.java|com/hd2/alarm_clk/AlarmPreferences.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
